--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+
 <h1>PLEASE DATE ME</h1>
   <div id="bookList">
-  
-  <script data-main="javascripts/promises" src="lib/bower_components/requirejs/require.js"></script>
+  <a href="signup.html">Signup Now</a>
+<script data-main="javascripts/main" src="lib/bower_components/requirejs/require.js"></script>
 
 </body>
 </html>
