--- a/browse.html
+++ b/browse.html
@@ -4,8 +4,8 @@
 	<title>Forest Fire Users</title>
 </head>
 <body>
-
-	
+	<h2>Users</h2>
+	<div id="profileDisplay"></div>
 <script data-main="javascripts/main" src="lib/bower_components/requirejs/require.js"></script>
 </body>
 </html>
