--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
 		<button id="signupButton">Start a Fire!</button>
 	</form>
 	
-	<a href="browse.html">Find Other Forest Fire Members</a>
+	<a href="browse.html" id="browseUsers">Find Other Forest Fire Members</a>
 	
 <script data-main="javascripts/main" src="lib/bower_components/requirejs/require.js"></script>
 
