--- a/index.html
+++ b/index.html
@@ -2,18 +2,35 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Book store</title>
+	<meta charset="utf-8">
+	<title>Dating App</title>
 
-  <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body>
 <h1>PLEASE DATE ME</h1>
-  <div id="bookList">
-  
-  <script data-main="javascripts/promises" src="lib/bower_components/requirejs/require.js"></script>
+	<div id="bookList">
+			<form>
+				<div>First Name:<input type="text" id="firstName" /></div>
+				<div>Last Name:<input type="text" id="lastName" /></div>
+				<div>Enter Your Profile Picture URL:<textarea rows="1" cols="35" id="imageSrc"></textarea></div>
+				<div>Interests:<textarea id="interests" cols="15" rows="2"></textarea></div>
+				<div>Looking For:
+						<select id="lookingFor">
+								<option value="Man" />Man
+								<option value="Woman" />Woman
+						</select>
+				</div>
+				<div>Park:<input type="text" id="park" /></div>
+				<div>Username:<input type="text" id="username" /></div>
+				<div>Password:<input type="text" id="password" /></div>
+				<button id="signupButton">Start a Fire!</button>
+		</form>
+
+	<script data-main="javascripts/promises" src="lib/bower_components/requirejs/require.js"></script>
+	<script data-main="javascripts/promises" src="javascripts/authenticate.js"></script>
 
 </body>
 </html>
