added CSS link to browse.html and cleaned up some code

--- a/signup.html
+++ b/signup.html
@@ -19,6 +19,7 @@
 		</div>
 		<div>Park:<input type="text" id="park" /></div>
 		<div>Username:<input type="text" id="username" /></div>
+		<div>Email:<input type="text" id="email" /></div>
 		<div>Password:<input type="text" id="password" /></div> 
 		<button id="signupButton">Start a Fire!</button>
 	</form>
