--- a/browse.html
+++ b/browse.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Forest Fire Users</title>
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
 	<h2>Users</h2>
