signup page presentable, bootstrapped

--- a/index.html
+++ b/index.html
@@ -10,26 +10,32 @@
 </head>
 
 
-<body class = "randbg">
+<body class = "randbg"> <!--this is for the background randomizer-->
   <a href="#"><img id = "logo" src ="/imgs/logo.png"></a>
   <div class="jumbotron">
     <h1>let somebody light your woods</h1>
-    <div class=""></div>
   </div>
-  <div class=""></div>
-
-
 </body>
+
+<!-- brownbar footer -->
+
 <footer>
   <div class="brownBar">
     <div class="motto">america's <i>other</i> best idea</div>
     </br>
   </div>
-  <a class="btn btn-primary btn-lg ontop" href="#" role="button">start some fires</a>
+  <a class="btn btn-primary btn-lg ontop" href="signup.html" role="button">start some fires</a>
 </footer>
 
+<!-- scripts -->
+
 <script data-main="javascripts/promises" src="lib/bower_components/requirejs/require.js"></script>
+
+<!-- jquery cdn, kill this in final. -->
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+
+<!-- background randomizer -->
+
 <script src="javascripts/rand.bg.js"></script>
 <script>
   $(".randbg").RandBG({
