browse page added, signup fixed, hold onto your butts

--- a/signup.html
+++ b/signup.html
@@ -25,22 +25,21 @@
           <span class="input-group-addon" id="sizing-addon2">put a link to your profile pic</span>
           <input type="text" class="form-control" id="imageSrc" placeholder="img_link.jpg" aria-describedby="sizing-addon2">
         </div>
-        <div class="input-group col-md-6">
+        <div class="input-group input-group-lg col-md-6">
           <span class="input-group-addon" id="sizing-addon2">interests</span>
           <input type="text" class="form-control" id="interests" placeholder="bear roping, warning youths about the dangers of bears, making bear jerky" aria-describedby="sizing-addon2">
         </div>
-        <div class="input-group col-md-6">
+        <div class="input-group input-group-lg col-md-6">
           <span class="input-group-addon" id="sizing-addon2">park</span>
           <input type="text" class="form-control" id="park" placeholder="Yosemite National Park" aria-describedby="sizing-addon2">
         </div>
-        <div class="input-group col-md-6">
+        <div class="input-group input-group-lg col-md-6">
           <input type="text" class="form-control" id="username" placeholder="username" aria-describedby="sizing-addon2">
         </div>
-        <div class="input-group col-md-6">
+        <div class="input-group input-group-lg col-md-6">
           <input type="text" class="form-control" id="password" placeholder="password" aria-describedby="sizing-addon2">
         </div>
   </div>
-<div class="spacer col-md-3"></div>
 </body>
 
 <!-- brownbar footer -->
@@ -50,7 +49,7 @@
     <div class="motto">america's <i>other</i> best idea</div>
     </br>
   </div>
-  <a class="btn btn-primary btn-lg ontop" id="signupButton" href="#" role="button">start a fire!</a>
+  <a class="btn btn-primary btn-lg ontop" id="signupButton" href="browse.html" role="button">start a fire!</a>
 </footer>
 
 <!-- scripts -->
