Semi working some more css

--- a/signup.html
+++ b/signup.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Signup for Forest Fires</title>
+	<link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
 
-	
-	<form>	
+
+	<form>
 		<div>First Name:<input type="text" id="firstName" /></div>
 		<div>Last Name:<input type="text" id="lastName" /></div>
 		<div>Enter Your Profile Picture URL:<textarea rows="1" cols="35" id="imageSrc"></textarea></div>
@@ -19,12 +21,12 @@
 		</div>
 		<div>Park:<input type="text" id="park" /></div>
 		<div>Username:<input type="text" id="username" /></div>
-		<div>Password:<input type="text" id="password" /></div> 
+		<div>Password:<input type="text" id="password" /></div>
 		<button id="signupButton">Start a Fire!</button>
 	</form>
-	
+
 	<a href="browse.html" id="browseUsers">Find Other Forest Fire Members</a>
-	
+
 <script data-main="javascripts/main" src="lib/bower_components/requirejs/require.js"></script>
 
 </body>
